# safe-start-for-codex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PORTIERUNGSPLAN.md  README.md  README_de.md  RELEASES.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  build_exe.bat  llms.txt  pyproject.toml
.github/workflows/: ci.yml  source-platform-smoke.yml
docs/: SOLUTION_CONCEPT.md  UPSTREAM_COMMENT_ON_24327.md  UPSTREAM_ISSUE_PROPOSAL.md
src/safe_start_for_codex/: __init__.py  cli.py  tray_app.py
tests/: source_platform_smoke.py  test_bugsweep_resweep_20260622.py  test_cli.py  test_third_party_licenses.py
