[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "safe-start-for-codex"
version = "1.1.2"
description = "Unofficial Windows startup gate for Codex Desktop automations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Lukas Geiger" }
]
keywords = ["codex", "openai", "automation", "windows", "startup"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
tray = [
  "pillow>=10.0",
  "pystray>=0.19"
]
dev = [
  "pytest>=8.0"
]
build = [
  "pyinstaller>=6.0"
]

[project.scripts]
safe-start-for-codex = "safe_start_for_codex.cli:main"

[project.urls]
Homepage = "https://github.com/dev-bricks/safe-start-for-codex"
Issues = "https://github.com/dev-bricks/safe-start-for-codex/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/safe_start_for_codex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
